CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "Building Fluid 2D")
Project(Fluid2D CXX)

SET(FLUID2D_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Fluid 2D src dir: ${FLUID2D_SRC_DIR}")
SET(FLUID2D_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Fluid 2D bin dir: ${FLUID2D_BIN_DIR}")
SET(FLUID2D_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_EXECUTABLE(Fluid2D ${FLUID2D_SRC_FILES})
TARGET_LINK_LIBRARIES(Fluid2D ${FLUID2D_LIBRARIES})
INCLUDE_DIRECTORIES(${FLUID2D_INCLUDE_DIRS})
